# sparklearnings

./: README.md  pyproject.toml
src/: sparkjob.py
