[tool.poetry]
name = "sparklearnings"
version = "0.1.0"
description = "my learnings of spark"
authors = ["SadineniAbhi <abhisadineni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
